# lzwjava.github.io

./: .gitignore  .webui_secret_key  10yo-ar.html  10yo-de.html  10yo-en.html  10yo-es.html  10yo-fr.html  10yo-hant.html  10yo-hi.html  10yo-ja.html  10yo-zh.html  404.html  AGENTS.md  CLAUDE.md  Cargo.toml  Gemfile  Makefile  README.md  _config.yml  advanced-markdown-ar.html  advanced-markdown-de.html  advanced-markdown-en.html  advanced-markdown-es.html  advanced-markdown-fr.html  advanced-markdown-hant.html  advanced-markdown-hi.html  advanced-markdown-ja.html  advanced-markdown-zh.html  agi-ar.html  agi-de.html  agi-en.html  agi-es.html  agi-fr.html  agi-hant.html  agi-hi.html  agi-ja.html  agi-world-ar.html  agi-world-de.html  agi-world-en.html  agi-world-es.html  (+4131 more)
.claude/: settings.local.json
_drafts/: 2006-03-15-primary-school-en.md  2006-03-15-qq-registration-en.md  2013-07-15-middle-shool-en.md  2024-08-19-text-helper-en.md  2025-04-23-tire-en.md  2025-06-07-news-bot-en.md  2025-06-08-location-bot-en.md  2025-06-08-maximize-pc-use-en.md  2025-06-18-hydrogen-peroxide-foot-en.md  2025-06-24-sleeping-socks-en.md  2025-07-06-dishwasher-repair-en.md  2025-07-08-airfryer-en.md  2025-07-10-accumulate-logs-en.md  2025-07-10-english-animation-en.md  2025-07-10-ml-job-en.md  2025-07-10-specific-en.md  2025-07-11-hands-on-en.md  2025-07-12-seek-validation-en.md  2025-07-13-mistake-live-father-en.md  2025-07-14-avoid-mosquito-en.md  2025-07-14-electronic-lock-en.md  2025-07-14-paragraph-translation-en.md  (+30 more)
rust/: Cargo.toml
rust/src/: main.rs  quick.rs  simple.rs
(+18166 files in other folders)
