[package]
name = "example"
version = "0.1.0"
edition = "2024"
authors = ["lzwjava@gmail.com"]
description = "A simple Rust example project"

[dependencies]
# Async runtime for `#[tokio::main]`
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }

# HTTP client with JSON support
reqwest = { version = "0.11", features = ["json"] }

# Serde for (de)serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
